edit task scrollbar fix

--- a/css/add_task.css
+++ b/css/add_task.css
@@ -23,7 +23,7 @@
 }
 
 .addTask-headline {
-    margin-bottom: 24px;
+    margin-bottom: 12px;
     display: flex;
     justify-content: space-between;
     align-items: center;
